# paranoia-game

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  main.js  package-lock.json  package.json
cpp/: Makefile  SHA256SUMS-v2.txt  paranoia.rc
cpp/src/: audio.h  config.h  director.h  entity.h  game.h  gfx.h  house.h  main.cpp  music.h  phone.h  player.h  shaders.h  ui.h  world.h
docs/: BATTERY_SYSTEM.md  DEBUG_PHYSICS.md  ENTITY_DESIGN.md  LOOP_PACING.md  MIGRATION_ARCHITECTURE.md  NARRATIVE_DESIGN.md  UI_UX_DESIGN.md
godot/: .gitignore  README.md  export_presets.cfg  paranoia.gdextension  project.godot
godot/assets/fonts/: PressStart2P-Regular.ttf.import
godot/gdextension/: CMakeLists.txt  SConstruct
godot/gdextension/src/: paranoia_synth.cpp  paranoia_synth.h  register_types.cpp  register_types.h
godot/scenes/: AudioTest.tscn  EntityTest.tscn  Game.tscn  House.tscn  HouseTest.tscn  Main.tscn  Phone.tscn  PhoneTest.tscn  PlayTest.tscn  Player.tscn  PostFXTest.tscn  ShadowEntity.tscn  World.tscn
godot/scenes/ui/: Credits.tscn  HUD.tscn  Intro.tscn  (+2 more)
godot/scripts/: audio.gd  audio_test.gd  config.gd  director.gd  entity_test.gd  game_root.gd  game_state.gd  ground_zone.gd  house.gd  house_test.gd  interactable.gd  main.gd  phone.gd  phone_screen.gd  phone_test.gd  play_test.gd  player.gd  postfx.gd  postfx_test.gd  ramp_zone.gd  shadow_entity.gd  ui_util.gd  world.gd  world_root.gd
godot/shaders/: post.gdshader
src/: audio.js  director.js  entity.js  game.js  house.js  phone.js  player.js  postfx.js  world.js
tools/: make-icon.js
(+5 files in other folders)
